// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52uv uv_toi52u2j uv_toi52u31 uv_toi52u5d uv_toi52u5v"
        >
          <label
            class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
            for="_r_7_"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow9 uv_m4c9own uv_m4c9ow1a uv_m4c9ow2m"
          >
            *
          </span>
        </div>
        <div
          class="uv_gwf0flc uv_gwf0fl6 uv_gwf0fl5 uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
        >
          <div
            class="uv_gwf0flb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_gwf0fl2 uv_gwf0fl1"
              data-testid="unit-input"
              id="_r_7_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_gwf0flg uv_gwf0flf uv_uf6pag0"
            style="--uv_gwf0fl0: 12.6rem;"
          >
            <div
              aria-controls="_r_b_"
              aria-describedby="_r_b_"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-controls="_r_b_"
                  aria-expanded="false"
                  class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knda uv_1ba7knde"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_1ba7kndm uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                  >
                    Days
                  </span>
                  <div
                    class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDown
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`unitInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_gwf0flc uv_gwf0fl6 uv_gwf0fl5 uv_x6hyh50"
          style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
        >
          <div
            class="uv_gwf0flb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_gwf0fl2 uv_gwf0fl1"
              data-testid="unit-input"
              id="_r_0_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_gwf0flg uv_gwf0flf uv_uf6pag0"
            style="--uv_gwf0fl0: 12.6rem;"
          >
            <div
              aria-controls="_r_3_"
              aria-describedby="_r_3_"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  aria-controls="_r_3_"
                  aria-expanded="false"
                  class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knda uv_1ba7knde"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
                  >
                    Select item
                  </span>
                  <div
                    class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDown
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
